--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "server"
+name = "back_end"
 version = "0.1.0"
 authors = ["marcioordonez <marcio.v.ordonez@gmail.com>"]
 edition = "2018"
@@ -14,5 +14,6 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 datamodel = { path = "datamodel" }
 derive_more = "0.99.11"
+http = "0.2.1"
 [workspace]
 members = ["datamodel"]
